[workspace]
resolver = "2"
members = [
  "ceramic",
  "ceramic-http-client",
  "dapp-table/client",
  "file-system",
  "iroh-store",
  "types"
]

[workspace.dependencies]
anyhow = "1"
async-std = "1.12.0"
async-trait = "0.1.73"
base32 = "0.4.0"
ceramic-core = { git = "https://github.com/dataverse-os/rust-ceramic.git", branch = "patch-kubo-block-put" }
ceramic-event = { git = "https://github.com/dataverse-os/rust-ceramic.git", branch = "patch-kubo-block-put" }
ceramic-http-client = { path = "./ceramic-http-client" }
ceramic-kubo-rpc-server = { git = "https://github.com/dataverse-os/rust-ceramic.git", branch = "patch-kubo-block-put" }
chrono = { version = "0.4.30", features = ["serde"] }
dataverse-ceramic = { path = "./ceramic" }
dataverse-iroh-store = { path = "./iroh-store" }
dataverse-types = { path = "./types" }
dapp-table-client = { path = "./dapp-table/client" }
futures = "0.3.15"
hex = "0.4.3"
iroh = "0.11.0"
iroh-bytes = "0.11.0"
iroh-net = "0.11.0"
iroh-sync = "0.11.0"
int-enum = "0.5.0"
json-patch = "1.2.0"
log = "0.4.20"
num_cpus = "1.16.0"
once_cell = "1.18.0"
quic-rpc = { version = "0.6", default-features = false, features = ["flume-transport"] }
quinn = "0.10"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
swagger = "6.4.1"
tempfile = "3.8.0"
tokio = { version = "1.31.0", features = ["full"] }
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
