[package]
name = "ceramic-http-client"
version = "0.1.0"
edition = "2021"
authors = [
    "Nathaniel Cook <nvcook42@gmail.com>",
    "Danny Browning <dbrowning@3box.io>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/3box/rust-ceramic-http-client"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ceramic-event = { workspace = true }
dataverse-types = { workspace = true }
json-patch = { version = "1.0.0", features = ["diff"] }
reqwest = { version = "0.11.14", features = ["json"], optional = true }
schemars = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssi = { version = "0.7", features = ["ed25519"] }
url = { version = "2.2.2", optional = true }

[features]
default = ["remote"]
remote = ["reqwest", "url"]

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
