[package]
name = "dataverse-ceramic"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
ceramic-event = { workspace = true }
ceramic-http-client = { workspace = true }
dag-jose = "0.1.3"
dataverse-types = { workspace = true }
hex = { workspace = true }
int-enum = "0.5.0"
json-patch = "1.2.0"
libipld = "0.16.0"
multibase = "0.9.1"
serde = { workspace = true }
serde_json = { workspace = true }
ssh-key = { version = "0.6.1", features = ["ed25519"] }
ssi = { version = "0.7", features = ["ed25519"] }
tokio = { workspace = true }
unsigned-varint = "0.7.2"
url = { workspace = true }
