[package]
name = "dataverse-ceramic"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
ceramic-event = { workspace = true }
ceramic-http-client = { workspace = true }
ceramic-kubo-rpc-server = { workspace = true }
chrono = { workspace = true }
dag-jose = "0.1.3"
hex = { workspace = true }
int-enum = { workspace = true }
json-patch = "1.2.0"
libipld = "0.16.0"
log = { workspace = true }
multibase = "0.9.1"
serde = { workspace = true }
serde_json = { workspace = true }
swagger = { workspace = true }
ssh-key = { version = "0.6.1", features = ["ed25519"] }
ssi = { version = "0.7", features = ["ed25519"] }
tokio = { workspace = true }
unsigned-varint = "0.7.2"
url = { workspace = true }
reqwest = "0.11.22"
serde_repr = "0.1.17"
expect-test = "1.4.1"
sha2 = "0.10.8"
base64 = "0.21.5"
futures-util = "0.3.29"
futures.workspace = true
