[package]
name = "dataverse-ceramic"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21.5"
bytes = { workspace = true }
ceramic-core = { workspace = true }
ceramic-event = { workspace = true }
ceramic-http-client = { workspace = true }
ceramic-kubo-rpc-server = { workspace = true }
chrono = { workspace = true }
dag-jose = "0.1.3"
ethers-core = { version = "2.0.11", default-features = false }
ethers-providers = { version = "2.0.11", default-features = false }
expect-test = "1.4.1"
fang = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
int-enum = { workspace = true }
json-patch = "1.2.0"
libipld = "0.16.0"
log = { workspace = true }
lru = "0.12.1"
multibase = "0.9.1"
once_cell = { workspace = true }
postgres-native-tls = { workspace = true }
primitive-types = "0.12.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.17"
sha2 = "0.10.8"
ssh-key = { version = "0.6.1", features = ["ed25519"] }
ssi = { version = "0.7", features = ["ed25519"] }
swagger = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unsigned-varint = "0.7.2"
url = { workspace = true }
