[package]
name = "dataverse-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
ceramic-http-client = { workspace = true }
dapp-table-client = { workspace = true }
dataverse-ceramic = { workspace = true }
hex = { workspace = true }
int-enum = { workspace = true }
multibase = "0.9.1"
once_cell = "1.18.0"
serde = { workspace = true }
serde_json = { workspace = true }
ssi = { version = "0.7", features = ["ed25519"] }
tokio = { workspace = true }
unsigned-varint = "0.7.2"
url = { workspace = true }
uuid = { workspace = true }
