[package]
name = "dataverse-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
dapp-table-client = { workspace = true }
dataverse-ceramic = { workspace = true }
fang = { workspace = true }
int-enum = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
