[package]
name = "dataverse-file-system"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21.3"
ceramic-core = { workspace = true }
ceramic-http-client = { workspace = true }
chrono = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-core = { workspace = true }
diesel = { workspace = true }
fang = { workspace = true }
int-enum = { workspace = true }
json-patch = { workspace = true }
log = { workspace = true }
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
