[package]
name = "dataverse-file-system"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "file_system"

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21.3"
ceramic-core = { workspace = true }
ceramic-http-client = { workspace = true }
chrono = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-core = { workspace = true }
diesel = { workspace = true }
fang = { workspace = true }
int-enum = { workspace = true }
json-patch = { workspace = true }
log = { workspace = true }
openssl = "0.10.62"
postgres-openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.18"
tracing = { workspace = true }
uuid = { workspace = true }
