[package]
name = "dataverse-iroh-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base32 = "0.4.0"
ceramic-core = { git = "https://github.com/3box/rust-ceramic.git", branch = "main" }
chrono = { version = "0.4.30", features = ["serde"] }
dataverse-types = { workspace = true }
ed25519-dalek = "2.0.0"
futures = "0.3.15"
hex = "0.4.3"
iroh = "0.7.0"
iroh-bytes = "0.7.0"
iroh-net = "0.7.0"
iroh-sync = "0.7.0"
json-patch = "1.2.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
quic-rpc = { version = "0.6", default-features = false, features = ["flume-transport"] }
quinn = "0.10"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
tempfile = "3.8.0"
tokio = { version = "1.31.0", features = ["full"] }
