[package]
name = "dataverse-iroh-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ceramic-core = { workspace = true }
chrono = { version = "0.4.30", features = ["serde"] }
dataverse-ceramic = { workspace = true }
dataverse-types = { workspace = true }
ed25519-dalek = "2.0.0"
futures = "0.3.15"
hex = "0.4.3"
int-enum = { version = "0.5.0", features = ["convert"] }
iroh = { workspace = true }
iroh-bytes = { workspace = true }
iroh-net = { workspace = true }
iroh-sync = { workspace = true }
json-patch = { workspace = true }
num_cpus = "1.16.0"
once_cell = "1.18.0"
quic-rpc = { version = "0.6", default-features = false, features = ["flume-transport"] }
quinn = "0.10"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
tempfile = "3.8.0"
tokio = { workspace = true }
