[package]
name = "dataverse-iroh-store"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-core = { workspace = true }
dataverse-file-system = { workspace = true }
futures = "0.3.15"
iroh = { workspace = true }
iroh-bytes = { workspace = true }
iroh-sync = { workspace = true }
num_cpus = "1.16.0"
serde_json = { version = "1.0.106", features = ["raw_value"] }
tempfile = "3.8.0"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
