[package]
name = "dataverse-pgsql-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ceramic-core = { workspace = true }
dataverse-ceramic = { workspace = true }
dataverse-core = { workspace = true }
dataverse-file-system = { workspace = true }
diesel = { workspace = true }
int-enum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid ={ workspace = true }