[package]
name = "dataverse-types"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ceramic-core = { workspace = true }
int-enum = "0.5.0"
multibase = "0.9.1"
serde = { workspace = true }
serde_json = { workspace = true }
unsigned-varint = "0.7.2"
