[package]
name = "dataverse-types"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ceramic-core = { workspace = true }
dag-jose = "0.1.3"
int-enum = "0.5.0"
json-patch = "1.2.0"
libipld = "0.16.0"
multibase = "0.9.1"
serde = { workspace = true }
serde_json = { workspace = true }
unsigned-varint = "0.7.2"
