[package]
name = "dapp-table-client"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { workspace = true }
tokio = { workspace = true }
